--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 .container{
-    width: 95%;
+    width: 98%;
     margin: auto;
     height: 100%;
     
@@ -43,18 +43,50 @@
     background-color: blue;
 }
 .main-container .text-square{
+    margin-top: 150px;
     width: 30%;
-height: 100%;
+
 
     /* DEBUG */
     border: 1px solid white;
     background-color: bisque;
 }
 .main-container .photo-square{
-    
+    margin-top: 150px;
     width: 70%;
-    height: 100%;
     /* DEBUG */
     border: 1px solid black;
     background-color: blueviolet;
 }
+
+/* Seconda sezione */
+.section-2{
+    margin-top: 20px;
+    width: 100%;
+    height: 500px;
+    /* DEBUG */
+    border: 1px solid black;
+    /* background-color: #858d93; */
+
+}
+
+/* CREO UN CONTAINER PIù PICCOLO */
+.small-container{
+    width: 55%;
+    height: 100%;
+    margin: auto;
+    /* DEBUG */
+    border: 1px solid black;
+    background-color: beige;
+}
+
+.titolo-due{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+/* DEBUG */
+    border: 1px solid black;
+    background-color: aqua;
+}
+
+
