--- a/css/style.css
+++ b/css/style.css
@@ -63,10 +63,10 @@
 .section-2{
     margin-top: 20px;
     width: 100%;
-    height: 500px;
+    height: 800px;
     /* DEBUG */
     border: 1px solid black;
-    /* background-color: #858d93; */
+    background-color: #858d93;
 
 }
 
@@ -89,4 +89,23 @@
     background-color: aqua;
 }
 
+.card{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 800px;
+    /* DEBUG */
+    background-color: green;
+    border: 1px solid black;
+}
+
+/* CARD */
+.card{
+    width: ;
+    display: flex;
+    justify-content: space-between;
+    
+    /* DEBUG */
+    border: 1px solid black;
+}
 
