--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 *{
     margin: 0;
     padding: 0;
-    box-sizing: 0 auto;
+    box-sizing: border-box;
+}
+img{
+    width: 100%;
 }
 
 .container{
@@ -14,6 +17,10 @@
     border: 2px solid black;
 }
 
+/* DEBUG
+[class^=".sect"] */
+
+
 .header{
 
     /* DEBUG */
@@ -24,11 +31,13 @@
 /* PRIMA SEZIONE SFONDO AZZURRO */
 
 .section-one{
+    margin-top: 20px;
     width: 100%;
-    height: 400px;
+    min-height: 400px;
+    height: 300px;
     /* DEBUG */
     border: 1px solid black;
-    background-color: #B4D0E6;
+    /* background-color: #B4D0E6; */
 
 }
 
@@ -63,49 +72,65 @@
 .section-2{
     margin-top: 20px;
     width: 100%;
-    height: 800px;
+    min-height: 100%;
     /* DEBUG */
     border: 1px solid black;
-    background-color: #858d93;
+    /* background-color: #858d93; */
 
 }
+
 
 /* CREO UN CONTAINER PIù PICCOLO */
 .small-container{
     width: 55%;
-    height: 100%;
+    min-height: 200px;
     margin: auto;
     /* DEBUG */
     border: 1px solid black;
     background-color: beige;
 }
 
-.titolo-due{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-/* DEBUG */
-    border: 1px solid black;
-    background-color: aqua;
-}
 
-.card{
+
+.row{
     display: flex;
     flex-direction: row;
     width: 100%;
-    height: 800px;
     /* DEBUG */
+    min-height: 400px;
     background-color: green;
     border: 1px solid black;
 }
 
 /* CARD */
-.card{
-    width: ;
-    display: flex;
-    justify-content: space-between;
+.col-33{
+    width: 33.3%;
+   
     
     /* DEBUG */
     border: 1px solid black;
 }
 
+.col-60{
+    width: 60%;
+
+    /* DEBUG */
+    border: 1px solid black;
+}
+
+.col-40{
+    width: 40%;
+    /* DEBUG */
+    border: 1px solid black;
+
+}
+
+.section-3{
+    margin-top: 20px;
+    width: 100%;
+    min-height: 250px;
+    /* DEBUG */
+    border: 1px solid black;
+    /* background-color: #858d93; */
+
+}
