--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ img{
 /* PRIMA SEZIONE SFONDO AZZURRO */
 
 .section-one{
-    margin-top: 20px;
     width: 100%;
     min-height: 400px;
     height: 300px;
@@ -82,19 +81,23 @@ img{
 
 /* CREO UN CONTAINER PIù PICCOLO */
 .small-container{
-    width: 55%;
-    min-height: 200px;
+    width: 60%;
+    min-height: 400px;
     margin: auto;
     /* DEBUG */
     border: 1px solid black;
     background-color: beige;
 }
 
-
+/* UTILITY */
+.padding{
+    padding: 10px 0px;
+    list-style: none;
+}
 
 .row{
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
     width: 100%;
     /* DEBUG */
     min-height: 400px;
@@ -133,4 +136,43 @@ img{
     border: 1px solid black;
     /* background-color: #858d93; */
 
+}
+
+.row-2{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    flex-wrap: wrap;
+    /* DEBUG */
+    min-height: 400px;
+    background-color: rgba(105, 215, 105, 0.349);
+    border: 1px solid black;
+}
+
+.row-3{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    /* DEBUG */
+    min-height: 400px;
+    background-color: rgb(0, 0, 0);
+    border: 1px solid black;
+}
+
+.card{
+    display: flex;
+    width: 33.3%;
+    min-height: 100%;
+    /* DEBUG */
+    border: 1px solid black;
+    background-color: yellow;
+}
+
+.footer{
+    padding: 10px 10px;
+    color: white;
+    min-height: 400px;
+    width: 100%;
+    border: 1px solid greenyellow;
+    background-color: rgba(0, 0, 0, 0.957);
 }
