--- a/css/style.css
+++ b/css/style.css
@@ -2,15 +2,21 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 img{
-    width: 100%;
+   max-width: 100%;
 }
-
+ul{
+    list-style: none;
+}
 .container{
+    display: flex; 
+    flex-direction: row;
     width: 98%;
     margin: auto;
     height: 100%;
+    font-style: inherit
     
     /* DEBUG */
     /* background-color: rgb(161, 198, 198); */
@@ -22,43 +28,63 @@ img{
 
 
 .header{
-
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 20px;
+    height: 80px;
+    color: black;
     /* DEBUG */
 /* border: 2px solid blue; */
-    background-color: antiquewhite;
+    background-color: white;
+    color: 
 }
+.header ul{
+    display: flex;
+    gap: 20px;
+    text-decoration: none;
+}
+/* cancello sottotitolato e blu automatico di link */
+.header a{
+    text-decoration: none;
+    color: inherit;
+}
+
+/* MAIN */
+
+
 
 /* PRIMA SEZIONE SFONDO AZZURRO */
 
 .section-one{
     width: 100%;
-    min-height: 400px;
-    height: 300px;
+    min-height: 100%x;
     /* DEBUG */
     border: 1px solid black;
-    /* background-color: #B4D0E6; */
-
+    background-color: #B4D0E6;
 }
 
 /* Creo container grande */
 .main-container{
+    
     display: flex;
-    width: 70%;
+    width: 80%;
     margin: auto;
-    height: 100%;
+    min-height: 100%;
     /* DEBUG */
     border: 1px solid black;
-    background-color: blue;
+    background-color:#B4D0E6;;
+    color: white;
 }
 .main-container .text-square{
     margin-top: 150px;
     width: 30%;
 
-
     /* DEBUG */
     border: 1px solid white;
     background-color: bisque;
 }
+
 .main-container .photo-square{
     margin-top: 150px;
     width: 70%;
@@ -86,7 +112,7 @@ img{
     margin: auto;
     /* DEBUG */
     border: 1px solid black;
-    background-color: beige;
+    /* background-color: beige; */
 }
 
 /* UTILITY */
@@ -95,18 +121,62 @@ img{
     list-style: none;
 }
 
+.radio{
+    padding-top: 30px;
+    display: flex;
+    gap: 20px;
+    
+}
+
+.style{
+    color: black;
+    padding: 20px;
+    padding-top: 100px;
+
+
+}
+
+.position{
+    position: relative;  
+}
+
+.btn{
+    border: 1px solid black;
+    padding: 4px 5px;
+    margin-left: 20px;
+    color: white;
+    background-color: #0061FE;
+}
+
+.annulla{
+    padding: 20px;
+    margin-top: 10%;
+    color: black;
+}
+.arrow{
+    font-size: 40px;
+    padding: 0px 20px;
+    color: black;
+}
+
 .row{
     display: flex;
     justify-content: space-between;
     width: 100%;
     /* DEBUG */
     min-height: 400px;
-    background-color: green;
+    /* background-color: green; */
     border: 1px solid black;
 }
+/* HEADER 3 COLONNE */
+
+
+
 
 /* CARD */
 .col-33{
+    display: flex;
+    justify-content: center;
     width: 33.3%;
    
     
@@ -122,6 +192,7 @@ img{
 }
 
 .col-40{
+    
     width: 40%;
     /* DEBUG */
     border: 1px solid black;
@@ -167,7 +238,7 @@ img{
     border: 1px solid black;
     background-color: yellow;
 }
-
+/* FOOTER */
 .footer{
     padding: 10px 10px;
     color: white;
