--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,13 @@ ul{
 }
 
 /* UTILITY */
+.justify{
+display: flex;
+justify-content: center;
+
+
+}
+
 .padding{
     padding: 10px 0px;
     list-style: none;
@@ -135,6 +142,13 @@ ul{
 
 
 }
+.style-2{
+    color: black;
+    padding: 20px;
+    padding-top: 20px;
+
+
+}
 
 .position{
     position: relative;  
@@ -148,6 +162,13 @@ ul{
     background-color: #0061FE;
 }
 
+.btn-grey{
+    border: 1px solid black;
+    padding: 4px 5px;
+    margin-left: 20px;
+    color: grey;
+    background-color: white;
+}
 .annulla{
     padding: 20px;
     margin-top: 10%;
@@ -192,7 +213,7 @@ ul{
 }
 
 .col-40{
-    
+    padding: 20px;
     width: 40%;
     /* DEBUG */
     border: 1px solid black;
